Fix Tile Time page alignment - remove top spacing from text column

--- a/instructors.css
+++ b/instructors.css
@@ -2581,6 +2581,8 @@
 .tiletime-page .right-column {
     flex: 0 0 75%;
     align-self: flex-start;
+    margin-top: 0 !important;
+    padding-top: 0 !important;
 }
 
 .tiletime-image {
@@ -2593,6 +2595,7 @@
     list-style: none;
     padding: 0;
     margin: 0;
+    margin-top: 0 !important;
 }
 
 .tiletime-bullets li {
